[package]
name = "cycle_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.95"
async-trait = "0.1"
chrono = "0.4.39"
faststr = "0.2.29"
futures = "0.3.31"
tokio = {version = "1.43.0", features = ["full"]}
tracing = "0.1.41"
